fixed the grid alignment

--- a/src/containers/components/DisplayForecasts.css
+++ b/src/containers/components/DisplayForecasts.css
@@ -1,7 +1,7 @@
 .weatherForecastsWrapper {
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
-  grid-template-rows: 1fr 8fr;
+  grid-template-rows: 1fr 3fr 2fr;
   width: 75%;
   margin-left: 12%;
   margin-right: 15%;
@@ -10,15 +10,15 @@
   margin-top: 5px;
   background-color:white;
   opacity: 0.85;
+
 }
 
 .city {
   grid-column-start: 2;
   grid-column-end: 3;
   grid-row-start: 1;
-  grid-row-end: 6;
+  grid-row-end: 2;
   text-align: center;
-  height: 70px;
 }
 
 .laterToday{
@@ -40,11 +40,10 @@
 .inputForm{
   grid-column-start: 2;
   grid-column-end: 3;
-  /* grid-row-start: 5;
-  grid-row-end: 8; */
+  grid-row-start: 3;
+  grid-row-end: 4;
   text-align: center;
-  align-self: flex-start;
-  background-color: brown;
+  align-self: start;
 }
 
 
@@ -91,18 +90,14 @@
   grid-column-start: 2;
   grid-column-end: 3;
   grid-row-start: 2;
-  grid-row-end: 5;
-  align-self: center;
+  grid-row-end: 3;
+  align-self: flex-start;
   font-size: 50px;
   justify-self: center;
-  align-content: center;
-  padding: 50px;
-  margin-bottom: 200px;
   display: grid;
   grid-template-columns: '1fr 1fr';
   grid-template-rows: '1fr 1fr 2fr';
   align-content: center;
-  background-color: red;
 }
 
 .iconNow{
@@ -118,20 +113,16 @@
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 2;
-  grid-row-end: 10;
+  grid-row-end: 4;
   align-self: start;
-  background-color: black;
-
 }
 
 .nextDaysItems{
   grid-column-start: 3;
   grid-column-end: 4;
   grid-row-start: 2;
-  grid-row-end: 10;
+  grid-row-end: 4;
   align-self: start;
-  background-color: black;
-
 }
 
 #icona {
